--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <body>
     <h1>Hi</h1>
     <p>This page is currently under development</p>
+    <h3>Hallo</h3>
+    <p>Diese Seite ist aktuell in Entwicklung</p>
 </body>
 </html>
