Added login link

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <p>This page is currently under development</p>
     <h3>Hallo</h3>
     <p>Diese Seite ist aktuell in Entwicklung</p>
+    <h4>Anmeldung</h3>
+    <p><a href="https://biblewiki.one/login"></a></p>
 </body>
 </html>
